# portfolio

./: Chat.py  Home.py  PDF.py  components.py  components_chatbot.py  components_pinecone.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
pages/: 1_Personal_Search_Engine.py  2_Chat_with_your_Data.py  CSV.py  Dashboard.py
